--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,12 @@
         </div>
     </form>
 
+
+    <footer class="footer">
+        <p>&copy; LeanCloud 2015</p>
+    </footer>
+
+
 </div>
 
 </body>
