--- a/templates/index.html
+++ b/templates/index.html
@@ -21,27 +21,27 @@
         <h3 class="text-muted">LeanCloud TODO App</h3>
     </div>
 
-    <form class="form-horizontal" method="post">
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">事项</label>
+    {% for item in items %}
+    <div class="alert alert-info" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {{ item.content }}
+    </div>
+    {% endfor %}
 
-            <div class="col-sm-10">
-                <input type="text" required class="form-control" id="item" name="item" placeholder="事项">
-            </div>
+    <hr>
+
+    <form class="" method="post">
+        <div class="form-group">
+            <input type="text" required class="form-control" id="item" name="item" placeholder="事项">
         </div>
 
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">提交</button>
-            </div>
-        </div>
+        <button type="submit" class="btn btn-default">提交</button>
     </form>
 
 
     <footer class="footer">
         <p>&copy; LeanCloud 2015</p>
     </footer>
-
 
 </div>
 
